fixes #1061 - Theme sort options overlap Signed-off-by:Thorsten Eurich <thorsten@eurich.de>

--- a/themes/default/css/index.css
+++ b/themes/default/css/index.css
@@ -1939,6 +1939,9 @@ img.new_posts {
 #description_board .generalinfo .listlevel2 {
 	white-space:nowrap;
 }
+#description_board .generalinfo {
+	overflow: auto;
+}
 .topic_listing {
 	background: #e4e4e4;
 	box-shadow: 1px 2px 4px #eee;
